Add IME mode icon to UnifiedSystemTray.

This CL restores IME mode icon to UnifiedSystemTray. The icon was
removed as a part of UnifiedSystemTray & Shelf spec, but it turned out
the icon is important especially for CJK users with laptop mode.
We still hide the icon for tablet mode.

TEST=manual
BUG=854948

Change-Id: I55bdd88627f91c9e285242b725c4a55451d0c60a
Reviewed-on: https://chromium-review.googlesource.com/1116412
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571395}
Former-commit-id: c3b34354fd7572702bf619b1e4bf9b46d9974b6f